force-app/main/default/objects/Seat_Sales_Tracking__c/Seat_Sales_Tracking__c.object-meta.xml
<CustomObject>
    <label>Seat Sales Tracking</label>
    <nameField>
        <displayFormat>ST{YYYY}{MM}{00000000}</displayFormat>
        <label>Sales Tracking No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seat Sales Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>