force-app/main/default/objects/Seat_Sales_Tracking__c/fields/CaseStatus__c.field-meta.xml
<CustomField>
    <fullName>CaseStatus__c</fullName>
    <formula>TEXT(Case_ID__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseStatus</label>
    <type>Text</type>
</CustomField>