force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Delete__c.field-meta.xml
<CustomField>
    <fullName>Delete__c</fullName>
    <formula>AND(
OR( TODAY() &gt;  Departing_Flight_Date__c, TODAY()&gt; Case_ID__r.Returning_Flight_Date__c ),
OR( CaseStatus__c = &quot;Closed&quot;,  CaseStatus__c  = &quot;Ticket Issued&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>