force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Departing_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>Departing_Flight_Date__c</fullName>
    <formula>Case_ID__r.Departing_Flight_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departing Flight Date</label>
    <type>Date</type>
</CustomField>