force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Departing_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Departing_Flight_Number__c</fullName>
    <formula>Case_ID__r.Departing_Flight_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departing Flight Number</label>
    <type>Text</type>
</CustomField>