force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Is_My_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Case__c</fullName>
    <formula>Case_ID__r.Is_My_Case__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Case?</label>
    <type>Checkbox</type>
</CustomField>