force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Need_Sales_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Need_Sales_Tracking__c</fullName>
    <formula>If(Or( Text( Case_ID__r.Status )=&quot;New&quot;, Text( Case_ID__r.Status )=&quot;Ticket Sales in Progress&quot;, Text( Case_ID__r.Status )=&quot;Adhoc Request Approving&quot;, Text( Case_ID__r.Status )=&quot;Adhoc Request Approved&quot;, Text( Case_ID__r.Status )=&quot;Adhoc Request Rejected&quot;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Need Sales Tracking?</label>
    <type>Checkbox</type>
</CustomField>