force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Returning_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>Returning_Flight_Date__c</fullName>
    <formula>Case_ID__r.Returning_Flight_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Returning Flight Date</label>
    <type>Date</type>
</CustomField>