force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <formula>Text(Case_ID__r.Route__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route</label>
    <type>Text</type>
</CustomField>