force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Route_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>Route_Flight_Date__c</fullName>
    <formula>Route__c &amp; Departing_Flight_Number__c &amp;&quot;(&quot;&amp;Text( Departing_Flight_Date__c )&amp;&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route-Flight(Date)</label>
    <type>Text</type>
</CustomField>