force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Send_Seat_Sales_Tracking_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Send_Seat_Sales_Tracking_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Seat Sales Tracking Reminder</label>
    <type>Checkbox</type>
</CustomField>