force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Starlux_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Starlux_Agent_Email__c</fullName>
    <formula>Case_ID__r.Starlux_Agent_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Starlux Agent Email</label>
    <type>Text</type>
</CustomField>