force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Total_Final_Allocated_Seats__c.field-meta.xml
<CustomField>
    <fullName>Total_Final_Allocated_Seats__c</fullName>
    <formula>Case_ID__r.Total_Final_Allocated_Seats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Final Allocated Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>