force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Total_Seat_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Seat_Sales__c</fullName>
    <label>Total Seat Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>