force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Travel_Agent_Alternate_Email_3__c.field-meta.xml
<CustomField>
    <fullName>Travel_Agent_Alternate_Email_3__c</fullName>
    <label>Travel Agent Alternate Email 3</label>
    <type>Email</type>
</CustomField>