force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Travel_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Travel_Agent_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Travel Agent ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Seat Sales Trackings</relationshipLabel>
    <relationshipName>Seat_Sales_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>