force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Week 01</fullName>
            </value>
            <value>
                <fullName>Week 02</fullName>
            </value>
            <value>
                <fullName>Week 03</fullName>
            </value>
            <value>
                <fullName>Week 04</fullName>
            </value>
            <value>
                <fullName>Week 05</fullName>
            </value>
            <value>
                <fullName>Week 06</fullName>
            </value>
            <value>
                <fullName>Week 07</fullName>
            </value>
            <value>
                <fullName>Week 08</fullName>
            </value>
            <value>
                <fullName>Week 09</fullName>
            </value>
            <value>
                <fullName>Week 10</fullName>
            </value>
            <value>
                <fullName>Week 11</fullName>
            </value>
            <value>
                <fullName>Week 12</fullName>
            </value>
            <value>
                <fullName>Week 13</fullName>
            </value>
            <value>
                <fullName>Week 14</fullName>
            </value>
            <value>
                <fullName>Week 15</fullName>
            </value>
            <value>
                <fullName>Week 16</fullName>
            </value>
            <value>
                <fullName>Week 17</fullName>
            </value>
            <value>
                <fullName>Week 18</fullName>
            </value>
            <value>
                <fullName>Week 19</fullName>
            </value>
            <value>
                <fullName>Week 20</fullName>
            </value>
            <value>
                <fullName>Week 21</fullName>
            </value>
            <value>
                <fullName>Week 22</fullName>
            </value>
            <value>
                <fullName>Week 23</fullName>
            </value>
            <value>
                <fullName>Week 24</fullName>
            </value>
            <value>
                <fullName>Week 25</fullName>
            </value>
            <value>
                <fullName>Week 26</fullName>
            </value>
            <value>
                <fullName>Week 27</fullName>
            </value>
            <value>
                <fullName>Week 28</fullName>
            </value>
            <value>
                <fullName>Week 29</fullName>
            </value>
            <value>
                <fullName>Week 30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>