force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Week_Comparison__c.field-meta.xml
<CustomField>
    <fullName>Week_Comparison__c</fullName>
    <formula>case(mod(today() - DATE(1985,6,24),7),
6, if(Date__c - today() &lt;=0, if(Date__c - today() &gt;-7,&quot;This week&quot;,if(today() -   Date__c &lt;=14,&quot;Last Week&quot;,&quot;Other&quot;)),if(Date__c - today() &lt;8,&quot;Next Week&quot;,&quot;Other&quot;)), 
0, if(Date__c - today() &lt;=7, if(Date__c - today() &gt;-1,&quot;This week&quot;,if(today() -   Date__c &lt;=8,&quot;Last Week&quot;,&quot;Other&quot;)),if(Date__c - today() &lt;15,&quot;Next Week&quot;,&quot;Other&quot;)), 
1, if(Date__c - today() &lt;=6, if(Date__c - today() &gt;-2,&quot;This week&quot;,if(today() -   Date__c &lt;=9,&quot;Last Week&quot;,&quot;Other&quot;)),if(Date__c - today() &lt;14,&quot;Next Week&quot;,&quot;Other&quot;)), 
2, if(Date__c - today() &lt;=5, if(Date__c - today() &gt;-3,&quot;This week&quot;,if(today() -   Date__c &lt;=10,&quot;Last Week&quot;,&quot;Other&quot;)),if(Date__c - today() &lt;13,&quot;Next Week&quot;,&quot;Other&quot;)), 
3, if(Date__c - today() &lt;=4, if(Date__c - today() &gt;-4,&quot;This week&quot;,if(today() -   Date__c &lt;=11,&quot;Last Week&quot;,&quot;Other&quot;)),if(Date__c - today() &lt;12,&quot;Next Week&quot;,&quot;Other&quot;)), 
4, if(Date__c - today() &lt;=3, if(Date__c - today() &gt;-5,&quot;This week&quot;,if(today() -   Date__c &lt;=12,&quot;Last Week&quot;,&quot;Other&quot;)),if(Date__c - today() &lt;11,&quot;Next Week&quot;,&quot;Other&quot;)), 
5, if(Date__c - today() &lt;=2, if(Date__c - today() &gt;-6,&quot;This week&quot;,if(today() -   Date__c &lt;=13,&quot;Last Week&quot;,&quot;Other&quot;)),if(Date__c - today() &lt;10,&quot;Next Week&quot;,&quot;Other&quot;)),
 &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Comparison</label>
    <type>Text</type>
</CustomField>