force-app/main/default/objects/Seat_Sales_Tracking__c/fields/Week_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_Date__c</fullName>
    <formula>Text(Week__c) &amp;&quot;-&quot;&amp; Text(Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week/Date</label>
    <type>Text</type>
</CustomField>