force-app/main/default/objects/Seat_Sales_Tracking__c/validationRules/Not_Change_After_Waiting_for_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Change_After_Waiting_for_Payment</fullName>
    <active>false</active>
    <description>Not Allow to Change Seat Sales Tracking after case status Request for Ticketing</description>
    <errorConditionFormula>And( 

Ischanged( Total_Seat_Sales__c ), 

Text(Case_ID__r.Status )!= &quot;New&quot;, 
Text(Case_ID__r.Status )!= &quot;Ticket Sales in Progress&quot;,
NOT(CONTAINS(Text(Case_ID__r.Status), &quot;Adhoc&quot;))

)</errorConditionFormula>
    <errorMessage>Not Allow to Change Seat Sales Tracking after case status Request for Ticketing</errorMessage>
</ValidationRule>