force-app/main/default/objects/Seat_Sales_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Route__c</columns>
    <columns>Departing_Flight_Number__c</columns>
    <columns>Departing_Flight_Date__c</columns>
    <columns>Returning_Flight_Number__c</columns>
    <columns>Returning_Flight_Date__c</columns>
    <columns>Duration__c</columns>
    <columns>Total_Final_Allocated_Seats__c</columns>
    <columns>Total_Seat_Sales__c</columns>
    <columns>Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>