force-app/main/default/objects/Seat_Sales_Tracking__c/listViews/Sales_Tracking_Last_Week.listView-meta.xml
<ListView>
    <fullName>Sales_Tracking_Last_Week</fullName>
    <booleanFilter>(1 AND 2 AND 3 AND 4 AND 5 AND 6) OR (1 AND 2 AND 3 AND 4 AND 7 AND 8)</booleanFilter>
    <columns>Case_ID__c</columns>
    <columns>Route__c</columns>
    <columns>Departing_Flight_Date__c</columns>
    <columns>Departing_Flight_Number__c</columns>
    <columns>Returning_Flight_Date__c</columns>
    <columns>Returning_Flight_Number__c</columns>
    <columns>Duration__c</columns>
    <columns>Total_Final_Allocated_Seats__c</columns>
    <columns>Total_Seat_Sales__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <filters>
        <field>Need_Sales_Tracking__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Total_Final_Allocated_Seats__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CaseStatus__c</field>
        <operation>notEqual</operation>
        <value>Request for Ticketing,Waiting for Payment,Ready for Ticketing,Ticket Issued,Price Approving</value>
    </filters>
    <filters>
        <field>Departing_Flight_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>6/26/2020</value>
    </filters>
    <filters>
        <field>Week__c</field>
        <operation>equals</operation>
        <value>Week 06,Week 07,Week 08,Week 09,Week 10,Week 11,Week 12,Week 13,Week 14,Week 15,Week 16,Week 17</value>
    </filters>
    <filters>
        <field>Departing_Flight_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>6/25/2020</value>
    </filters>
    <filters>
        <field>Week__c</field>
        <operation>equals</operation>
        <value>Week 01,Week 02,Week 03,Week 04,Week 05,Week 06,Week 07,Week 08,Week 09</value>
    </filters>
    <label>Sales Tracking Last Week(All Weeks)</label>
</ListView>