force-app/main/default/objects/Seat_Sales_Tracking__c/listViews/Sales_Tracking_This_Week.listView-meta.xml
<ListView>
    <fullName>Sales_Tracking_This_Week</fullName>
    <columns>Case_ID__c</columns>
    <columns>Route__c</columns>
    <columns>Departing_Flight_Date__c</columns>
    <columns>Departing_Flight_Number__c</columns>
    <columns>Returning_Flight_Date__c</columns>
    <columns>Returning_Flight_Number__c</columns>
    <columns>Duration__c</columns>
    <columns>Total_Final_Allocated_Seats__c</columns>
    <columns>Total_Seat_Sales__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>Need_Sales_Tracking__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Total_Final_Allocated_Seats__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CaseStatus__c</field>
        <operation>notEqual</operation>
        <value>Request for Ticketing,Waiting for Payment,Ready for Ticketing,Ticket Issued,Price Approving</value>
    </filters>
    <filters>
        <field>Departing_Flight_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:210</value>
    </filters>
    <filters>
        <field>Route__c</field>
        <operation>contains</operation>
        <value>DAD</value>
    </filters>
    <label>Sales Tracking This Week(All Weeks)</label>
</ListView>